# ecommerce

./: .flake8  README.md  main.py  pyproject.toml
src/: models.py
tests/: test_models.py
