[project]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = [
    {name = "github-main-user",email = "kolya.skripn@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
mypy = "^1.15.0"
isort = "^6.0.0"
black = "^25.1.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
    \.git
  )/
)
'''

[tool.isort]
line_length = 119
multi_line_output = 3

[tool.pytest.ini_options]
pythonpath = ["."]
